2020-01-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: Check whether the mailbox was closed during
	set-fraction, while running filters on reception.

	* libbalsa/mailbox.c (lbm_run_filters_on_reception_idle_cb):

2020-01-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Really disconnect from a network monitor signal

	* src/main-window.c (balsa_window_init): store the network
	monitor's "network-changed" signal handler id;
	(balsa_window_destroy): use it to disconnect the handler.

2020-01-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox: when closing a mailbox, remove the source of any
	pending run-filters-on-reception idle callback.

	* libbalsa/mailbox.c (libbalsa_mailbox_close): remove the
	source, if any;
	(libbalsa_mailbox_run_filters_on_reception): check that no
	callback is pending.

2020-01-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: minor cleanup

	* src/balsa-index.c (bndx_scroll_on_open_idle): rename 'total'
	to 'n_children', as in:
	(balsa_index_ensure_visible): use
	gtk_tree_path_new_from_indices() instead of
	gtk_tree_model_iter_nth_child() and gtk_tree_model_get_path().

2020-01-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	libbalsa/x509-cert-widget: keep scan-build happy

	* libbalsa/x509-cert-widget.c (x509_cert_chain_smime): keep
	  scan-build happy by checking for NULL chain.

2020-01-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: do not scroll to first-unread message when
	LibBalsaMailbox::changed signal is received.

	It is not needed, and it blocks scroll-on-open from scrolling to
	the first-unread message.

	* src/balsa-index.c (bndx_mailbox_changed_idle): do not clear
	LibBalsaMailbox:first_unread; and do not scroll to it, either.

2020-01-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Avoid recursive entry

	to an idle callback. It happens because of a call to
	libbalsa_progress_set_fraction(), which then results in a call